# my-cpp-application

./: CMakeLists.txt  README.md
MessageFilter/: CMakeLists.txt  MessageFilter.cpp  MessageFilter.h  test_MessageFilter.cpp
MessageProcessor/: CMakeLists.txt  Main.cpp  MessageProcessor.cpp  MessageProcessor.h  test_MessageProcessor.cpp
MessageSender/: CMakeLists.txt  Main.cpp  MessageSender.cpp  MessageSender.h  messages.txt  test_MessageSender.cpp
